# swagger/api.swagger.json
@@ -43,6 +43,38 @@
         ]
       }
     },
+    "/v1/create-multi": {
+      "post": {
+        "operationId": "OcpInstruction_CreateMultiV1",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/ocp_instruction_apiCreateMultiV1Response"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/ocp_instruction_apiCreateMultiV1Request"
+            }
+          }
+        ],
+        "tags": [
+          "OcpInstruction"
+        ]
+      }
+    },
     "/v1/describe/{Id}": {
       "get": {
         "operationId": "OcpInstruction_DescribeV1",
@@ -150,9 +182,62 @@
           "OcpInstruction"
         ]
       }
+    },
+    "/v1/update/{Id}": {
+      "post": {
+        "operationId": "OcpInstruction_UpdateV1",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/ocp_instruction_apiUpdateV1Response"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "Id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "uint64"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/ocp_instruction_apiUpdateV1Request"
+            }
+          }
+        ],
+        "tags": [
+          "OcpInstruction"
+        ]
+      }
     }
   },
   "definitions": {
+    "ocp_instruction_apiCreateMultiV1Request": {
+      "type": "object",
+      "properties": {
+        "Instruction": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/ocp_instruction_apiInstruction"
+          }
+        }
+      }
+    },
+    "ocp_instruction_apiCreateMultiV1Response": {
+      "type": "object"
+    },
     "ocp_instruction_apiCreateV1Request": {
       "type": "object",
       "properties": {
@@ -213,6 +298,21 @@
       }
     },
     "ocp_instruction_apiRemoveV1Response": {
+      "type": "object"
+    },
+    "ocp_instruction_apiUpdateV1Request": {
+      "type": "object",
+      "properties": {
+        "Id": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "Instruction": {
+          "$ref": "#/definitions/ocp_instruction_apiInstruction"
+        }
+      }
+    },
+    "ocp_instruction_apiUpdateV1Response": {
       "type": "object"
     },
     "protobufAny": {
